# goldy-doom

./: AGENTS.md  Cargo.toml  update.md
assets/shaders/: doom_common.slang  doom_flat.slang  doom_sky.slang  doom_sprite.slang  doom_static.slang
src/: main.rs  player.rs
src/render/: level_builder.rs  lights.rs  mod.rs  renderer.rs  vertex.rs
src/wad/: archive.rs  image.rs  level.rs  light.rs  meta.rs  mod.rs  name.rs  tex.rs  types.rs  util.rs  visitor.rs
