[package]
name = "goldy-doom"
version = "0.1.0"
edition = "2021"
description = "DOOM renderer built on goldy — stress-testing a modern GPU library with a classic game."

[[bin]]
name = "goldy-doom"

[dependencies]
goldy = { path = "../goldy" }
winit = "0.30"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
